# bite-parser

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  pylintrc  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
bite/: __init__.py  core.py  io.py  parse_functions.py  parsers.py  transformers.py
bite/tests/: __init__.py  mock_reader.py  test_io.py  test_parse_functions.py  test_parsers.py  test_transformers.py
docs/: conf.py  index.rst  versions.json  versions_manifest.py
docs/_templates/: layout.html  versions.html
docs/api/: api.rst  io.rst  tests.rst  transformers.rst
docs/en/main/: .buildinfo  changelog.html  contributing.html  genindex.html  getting-started.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/en/main/_sources/: getting-started.rst.txt  index.rst.txt
docs/en/main/_sources/api/: api.rst.txt  parse_functions.rst.txt  parsers.rst.txt  transformers.rst.txt
docs/en/main/_static/: documentation_options.js
docs/en/main/api/: api.html  io.html  parse_functions.html  parsers.html  tests.html  transformers.html
docs/en/stable/: .buildinfo  changelog.html  contributing.html  genindex.html  getting-started.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/en/stable/_static/css/: versioning.css
docs/en/stable/api/: api.html  io.html  parse_functions.html  parsers.html  tests.html  transformers.html
docs/en/v0.1.2/: contributing.html  license.html  py-modindex.html  searchindex.js
docs/en/v0.1.2/api/: parsers.html  tests.html
docs/en/v0.1.3/: .buildinfo  contributing.html  getting-started.html  py-modindex.html  search.html  searchindex.js
docs/en/v0.1.3/api/: api.html  io.html  parse_functions.html  parsers.html
docs/en/v0.2.0/: .buildinfo  genindex.html  getting-started.html  index.html  objects.inv  search.html  searchindex.js
docs/en/v0.2.0/_sources/api/: parsers.rst.txt
docs/en/v0.2.0/api/: api.html  io.html  parse_functions.html  parsers.html  tests.html
docs/en/v0.2.1/: changelog.html  contributing.html  index.html  license.html  py-modindex.html
docs/en/v0.2.1/_sources/api/: tests.rst.txt
docs/en/v0.2.1/api/: parsers.html  tests.html
docs/en/v0.2.2/: changelog.html  getting-started.html  index.html  license.html  objects.inv  py-modindex.html  searchindex.js
docs/en/v0.2.2/api/: parse_functions.html  tests.html  transformers.html
docs/en/v0.2.3/: changelog.html  genindex.html  getting-started.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/en/v0.2.3/_static/js/: versioning.js
docs/en/v0.2.3/api/: api.html  parse_functions.html  tests.html
docs/en/v0.2.4/: changelog.html  getting-started.html  search.html  searchindex.js
docs/en/v0.2.4/api/: api.html  tests.html
docs/en/v0.2.5/: .buildinfo  contributing.html  genindex.html  getting-started.html  index.html  license.html  py-modindex.html
docs/en/v0.2.5/_sources/api/: io.rst.txt
docs/en/v0.2.5/_static/js/: versions.js
docs/en/v0.2.5/api/: api.html  io.html
