[tool.poetry]
authors = ["Jan Gosmann <jan@hyper-world.de>"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Compilers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "Asynchronous parser taking incremental bites out of your byte input stream."
keywords = ["asyncio", "parser", "PEG", "incremental", "parser expression grammar"]
license = "MIT"
name = "bite-parser"
packages = [
  {include = "bite"},
]
readme = "README.rst"
repository = "https://github.com/jgosmann/bite-parser/"
version = "0.2.3"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
Sphinx = "^6.0.0"
black = "^23.7.0"
darglint = "^1.8.1"
isort = "^5.11.4"
mypy = "^1.4.1"
pylint = "^2.15.10"
pytest = "^7.2.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.0.0"
sphinx-rtd-theme = "^1.1.1"

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
skip = [
  '.bzr',
  '.direnv',
  '.eggs',
  '.git',
  '.hg',
  '.mypy_cache',
  '.nox',
  '.pants.d',
  '.svn',
  '.tox',
  '.venv',
  '_build',
  'buck-out',
  'build',
  'dist',
  'node_modules',
  'venv',
]
use_parentheses = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
