[tool.poetry]
authors = ["Jan Gosmann <jan@hyper-world.de>"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Compilers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "Asynchronous parser taking incremental bites out of your byte input stream."
keywords = ["asyncio", "parser", "PEG", "incremental", "parser expression grammar"]
license = "MIT"
name = "bite-parser"
packages = [
  {include = "bite"},
]
readme = "README.rst"
repository = "https://github.com/jgosmann/bite-parser/"
version = "0.2.5"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
Sphinx = {version = "^8.1.3", python = "^3.10"}
darglint = "^1.8.1"
mypy = "^1.4.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
ruff = "^0.7.1"
sphinx-rtd-theme = {version = "^3.0.1", python = "^3.10"}

[tool.ruff.lint]
select = ["I"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
